# STM32F3DISCOVERY

./: STM32F3DISCOVERY.cfg
hello-world/: Cargo.toml
hello-world/src/: main.rs
led-roulette/: Cargo.toml  Makefile
led-roulette/.cargo/: config
led-roulette/src/: main.rs
