[package]
name = "hello-world"
version = "0.1.0"
authors = ["Daniel Mason <daniel@danielmason.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.6.3"
cortex-m-rt = "0.6.3"
f3 = "0.6.1"
panic-itm = "0.4.0"
